--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
 # URL=mongodb+srv://en22ca503099:f39elydTnwhSsNrQ@user.hzkdd9v.mongodb.net/?retryWrites=true&w=majority&appName=user
 
 MONGO_URL = mongodb://0.0.0.0:27017/SMS
+JWT_SECRET=hiiiiiiii
 # MONGO_URL = mongodb+srv://en22ca503099:f39elydTnwhSsNrQ@user.hzkdd9v.mongodb.net/?retryWrites=true&w=majority&appName=user
 
