--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.1",
     "react": "^18.3.1",
     "react-bootstrap-validation": "^0.1.11",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
