--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@coreui/coreui": "^5.0.2",
     "@emailjs/browser": "^4.3.3",
+    "@floating-ui/react": "0.26.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,12 +22,11 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-onclickoutside": "^6.8.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@floating-ui/react": "0.26.16",
-  "react-onclickoutside": "^6.8.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
