--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.1",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-onclickoutside": "^6.8.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
