--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "@coreui/coreui": "^5.0.2",
     "@emailjs/browser": "^4.3.3",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@floating-ui/react": "0.26.16",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,6 +34,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
