--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@coreui/coreui": "^5.0.2",
     "@emailjs/browser": "^4.3.3",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@floating-ui/react": "0.26.16",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@headlessui/react": "^2.1.1",
     "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
+    "@mui/material": "^5.15.21",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +26,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
